src/test/kalang-snippets/error/DefaultParamCheck.kl
missing default value for parameter lastParam

int methodWithDefParam(int value = 5, String lastParam) {
    return value + 1;
}